<resources>
    <string name="app_name">LinUS</string>
    <string name="ola">Olá!</string>
    <string name="intro1">Ficamos felizes em te ter por\n aqui...</string>
    <string name="intro2">Vamos começar?</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="login">Logar</string>
    <string name="visto_por_ultimo">Visto Por Último</string>
    <string name="conteudo_favoritado">Conteúdo Favoritado</string>
    <string name="titulo_conteudo">Conteúdo 1</string>
    <string name="carrossel_conteudo">2022 TÜBA \nAkademi Ödülleri Ça \n2022 TÜBA</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="distribuicoes">Distribuições</string>
    <string name="txt_distribuicao">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequunt.</string>
    <string name="title_distribuicao">Ubuntu</string>
    <string name="txt_iniciante">Recomendado para Iniciante</string>
    <string name="menu_content_by_level">Conteúdo</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu_hamburger">MenuHamburger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>